; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/char/ipmi/extr_ipmi_msghandler.c_ipmi_smi_probe_complete_register.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/char/ipmi/extr_ipmi_msghandler.c_ipmi_smi_probe_complete_register.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ipmi_smi_probe_complete = type { i32 (...)*, i32 }

@smi_probe_complete_mutex = common dso_local global i32 0, align 4
@smi_probe_complete = common dso_local global i32 0, align 4
@probing_complete = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ipmi_smi_probe_complete_register(%struct.ipmi_smi_probe_complete* %0) #0 {
  %2 = alloca %struct.ipmi_smi_probe_complete*, align 8
  store %struct.ipmi_smi_probe_complete* %0, %struct.ipmi_smi_probe_complete** %2, align 8
  %3 = call i32 @mutex_lock(i32* @smi_probe_complete_mutex)
  %4 = load %struct.ipmi_smi_probe_complete*, %struct.ipmi_smi_probe_complete** %2, align 8
  %5 = getelementptr inbounds %struct.ipmi_smi_probe_complete, %struct.ipmi_smi_probe_complete* %4, i32 0, i32 1
  %6 = call i32 @list_add(i32* %5, i32* @smi_probe_complete)
  %7 = load i64, i64* @probing_complete, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %19

9:                                                ; preds = %1
  %10 = load %struct.ipmi_smi_probe_complete*, %struct.ipmi_smi_probe_complete** %2, align 8
  %11 = getelementptr inbounds %struct.ipmi_smi_probe_complete, %struct.ipmi_smi_probe_complete* %10, i32 0, i32 0
  %12 = load i32 (...)*, i32 (...)** %11, align 8
  %13 = icmp ne i32 (...)* %12, null
  br i1 %13, label %14, label %19

14:                                               ; preds = %9
  %15 = load %struct.ipmi_smi_probe_complete*, %struct.ipmi_smi_probe_complete** %2, align 8
  %16 = getelementptr inbounds %struct.ipmi_smi_probe_complete, %struct.ipmi_smi_probe_complete* %15, i32 0, i32 0
  %17 = load i32 (...)*, i32 (...)** %16, align 8
  %18 = call i32 (...) %17()
  br label %19

19:                                               ; preds = %14, %9, %1
  %20 = call i32 @mutex_unlock(i32* @smi_probe_complete_mutex)
  ret i32 0
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @list_add(i32*, i32*) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
